# quantix

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/quantix/: __init__.py
src/quantix/core/: backtest.py  signals.py  strategy.py
src/quantix/data/: loader.py
tests/: test_basic.py
